--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@
 
 .sketch {
     display: grid;
+    box-shadow: 0px 0px 6px 3px rgb(129, 127, 127);
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
     height: 500px;
@@ -58,6 +59,8 @@
 
 .grid-item {
     border: 1px solid rgb(27, 27, 27);
+    /*border-radius: 5px;*/
+    background-color: white;
 }
 
 .footer{
