--- a/style.css
+++ b/style.css
@@ -30,7 +30,15 @@
     display: flex;
     flex: 1;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     background-color: green;
+}
+
+button {
+    height: 50px;
+    width: 100px;
+    
 }
 
 .sketchBox {
