--- a/style.css
+++ b/style.css
@@ -57,13 +57,20 @@ button {
     border-radius: 10px;
 }
 
-.color-scale-btn {
+.color-scale {
     font-size: medium;
     font-weight: bold;
     text-align: center;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    border-radius: 10px;
+    padding: 10px;
+    width: 80px;
+    height: 80px;
+    background-color: white;
+}
+
+.color-picker {
+    margin: 10px;
+    width: 60px;
 }
 
 .slide-container {
@@ -83,7 +90,6 @@ button {
     margin-left: 70px;
     font-size: medium;
     font-weight: bold;
-    color: 
 }
 
 .reset-btn {
