--- a/style.css
+++ b/style.css
@@ -108,9 +108,9 @@ button {
 }
 
 .sketch {
-    display: grid;
+    display: inline-grid;
     box-shadow: 0px 0px 6px 3px rgb(129, 127, 127);
-    grid-template-columns: repeat(16 , 1fr);
+    grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(16, 1fr);
     height: 500px;
     width: 500px;
